<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/Dots">
        <menu>
        <item
            android:id="@+id/nav_item_main"
            android:title="@string/agregarDots"
            android:icon="@android:drawable/ic_menu_add"
            ></item>
        <item android:id="@+id/nav_eliminar_dots"
            android:title="@string/eliminar_dots"
            android:icon="@android:drawable/ic_menu_delete"
            ></item>
            <item android:id="@+id/nav_programar_dots"
                android:title="@string/programar_dots"
                android:icon="@android:drawable/ic_lock_idle_alarm"
                ></item>
        </menu>
        </item>
    </group>
    <item android:title="@string/cuenta">
        <menu>
            <item android:id="@+id/nav_item_clearpreferences"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/restablecer_ajustes" />
            <item android:id="@+id/nav_item_signout"
                android:icon="@drawable/abc_vector_test"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>
    <item android:title="@string/anuncio">
        <menu>
            <item
                android:id="@+id/nav_item_pag"
                android:title="@string/consigue_tu_dots"
                android:icon="@drawable/ic_icon_money"></item>
        </menu>
    </item>
</menu>