<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgramDots"
    android:background="@color/grey_100">

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/programar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/dots"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edTimeE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo2"
        android:background="@drawable/ic_squarewhite_stroke">
        <TableRow>

            <TextView
                android:id="@+id/tvLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/lunes"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/martes"
                android:textSize="11sp"></TextView>
            <TextView
                android:id="@+id/tvMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/miercoles"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/jueves"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/viernes"
                android:textSize="11sp"></TextView>
            <TextView
                android:id="@+id/tvSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/sabado"
                android:textSize="11sp"></TextView>
            <TextView
                android:id="@+id/tvDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/domingo"
                android:textSize="11sp"></TextView>
        </TableRow>
        <TableRow>

            <CheckBox
                android:id="@+id/chLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="DuplicateSpeakableTextCheck" />
            <CheckBox
                android:id="@+id/chMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/chMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/chJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/chViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/chSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/chDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edTimeE"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/ic_squarewhite_stroke"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="Hora de encendido"
        android:inputType="time"
        android:minHeight="48dp"
        android:onClick="horaE"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTimeA"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="@font/aldrich"
        android:hint="Hora de apagado"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:background="@drawable/ic_squarewhite_stroke"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTimeE"
        app:layout_constraintVertical_bias="0.137"
        android:autofillHints="" />

    <android.widget.Button
        android:id="@+id/Program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/ic_squarecian"
        android:gravity="center"
        android:onClick="onclick"
        android:paddingVertical="1dp"
        android:text="@string/programar_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTimeA"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="DuplicateSpeakableTextCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>

    